--- a/stylePocetna.css
+++ b/stylePocetna.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: url('../slike/DJI_0786.jpg') no-repeat center center fixed;
+    background: url('DJI_0786.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 100%;
     width: 100%;
